# GDriveOps

./: .gitignore  LICENSE  MANIFEST.in  README.md  gdhandler.py  google_drive_handler.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-publish.yml
GDriveOps/: GDhandler.py
gdUpload/: __init__.py  gdhandler.py
gdUpload/src/: gdhandler.py
test/: test_gdhandler.py  test_google_drive_handler.py
tests/: conftest.py  test_gdhandler.py
tests/files/: DIABETES DATA.txt  Diabetes.docx
