[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gdUpload"
version = "0.1.8"
description = "A package for handling Google Drive file operations"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

authors = [
    {name = "Hammed A. Akande", email = "akandehammedadedamola@gmail.com"}
]

dependencies = [
    "google-auth",
    "google-auth-oauthlib",
    "google-auth-httplib2",
    "google-api-python-client",
    "PyMuPDF",
    "python-docx"
]

[project.urls]
homepage = "https://github.com/drhammed/gdUpload"
repository = "https://github.com/drhammed/gdUpload"
issues = "https://github.com/drhammed/gdUpload/issues"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov"
]

[project.scripts]
gdUpload = "gdUpload.gdhandler:main"
